codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_waiting_multiple_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
Chat:
────────────────────────────────────────────────────────────────────────────────
• weekly limit remaining:   100%
• tokens: total:            0 (0%)
          cached-input:     0 (0%)
          non-cached-input: 0 (0%)
          normal-output:    0 (0%)
          reasoning-output: 0 (0%)
• files created 0 · deleted 0 · modified 0 · lines +0 / -0
• time wall [duration] · finished [completion time]
────────────────────────────────────────────────────────────────────────────────

Transcript:
• Waited for background terminal · just fix
────────────────────────────────────────────────────────────────────────────────
• weekly limit remaining:   100%
• tokens: total:            0 (0%)
          cached-input:     0 (0%)
          non-cached-input: 0 (0%)
          normal-output:    0 (0%)
          reasoning-output: 0 (0%)
• files created 0 · deleted 0 · modified 0 · lines +0 / -0
• time wall [duration] · finished [completion time]
────────────────────────────────────────────────────────────────────────────────
